WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50786
WK2 authentication never consults WebCore session credential storage.
https://bugs.webkit.org/show_bug.cgi?id=50786
Summary
WK2 authentication never consults WebCore session credential storage.
Brady Eidson
Reported
2010-12-09 14:29:57 PST
WK2 authentication never consults WebCore session credential storage. In radar as<
rdar://problem/8749750
>
Attachments
Patch v1
(1.63 KB, patch)
2010-12-09 14:32 PST
,
Brady Eidson
sam
: review+
beidson
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2010-12-09 14:32:18 PST
Created
attachment 76123
[details]
Patch v1
Brady Eidson
Comment 2
2010-12-09 14:35:54 PST
Landed in
r73652
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug