<rdar://problem/8749750> and https://bugs.webkit.org/show_bug.cgi?id=50786 WK2 authentication never consults WebCore session credential storage.

Reviewed by Sam Weinig.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::shouldUseCredentialStorage): Since we don't need to expose this as
  API at this time, always return true.



Canonical link: https://commits.webkit.org/64060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73652 268f45cc-cd09-0410-ab3c-d52691b4dbfc